k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-deploy
  ports:
  - port: 80
    targetPort: 80
