k8s/api/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meu-ingress-api
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`minha-api.test`)
    kind: Rule
    services:
      - name: api-service
        port: 80
